<resources>

    <string name="app_name">Budget App</string>
    <string name="app_name_caps">BUDGET APP</string>


    <!-- BOTTOM NAV MENU -->
    <string name="year_overview">Year</string>
    <string name="month_overview">Month</string>
    <string name="month_details">Details</string>
    <string name="savings">Savings</string>


    <!-- TextInputLayout -->
    <string name="required">*Required</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="email_not_valid">Not a valid email address</string>
    <string name="password_not_confirmed">Passwords are not equal</string>
    <string name="password_too_short">Password must be longer than 6 characters</string>

    <!-- Login Fragment -->
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>

    <!-- Text Placeholders -->
    <string name="placeholder">Placeholder text</string>
    <string name="title_placeholder">Title Placeholder</string>
    <string name="date_placeholder">Date Placeholder</string>
    <string name="category_placeholder">Category Placeholder</string>
    <string name="sum_placeholder">Sum Placeholder</string>


    <!-- Buttons -->
    <string name="save_edited_expense">Save</string>
    <string name="add_expense">Add Expense</string>
    <string name="dialog_set">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="login">LOGIN</string>
    <string name="no_user_login">Continue without user</string>


    <!-- Hints -->
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="budget">Budget</string>
    <string name="expenses">Expenses</string>
    <string name="sum">Sum</string>
    <string name="remaining">Remaining</string>
    <string name="add_new_expense">Add new expense</string>

    <!-- Labels -->
    <string name="edit_budget">Edit Budget</string>


    <!-- ContentDescriptions -->
    <string name="category_color">Category color</string>
    <string name="budget_graph">Budget circle graph</string>
    <string name="select_month">Select Month</string>
    

    <!-- Budget / YearMonthPicker Dialogs -->
    <string name="BUDGET">budget</string>
    <string name="YEAR">Year</string>
    <string name="MONTH">Month</string>

    <!-- Other -->
    <string name="not_implemented">Not implemented</string>

</resources>