<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <TextView
            android:id="@+id/ExpenseCardView_Category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_marginStart="8dp"
            android:text="@string/category_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/ExpenseCardView_Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ExpenseCardView_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/ExpenseCardView_Sum"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/delete_checkbox"
            android:text="@string/date_placeholder"
            app:layout_constraintEnd_toStartOf="@+id/delete_checkbox"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ExpenseCardView_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ExpenseCardView_Category"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_toStartOf="@id/ExpenseCardView_Sum"
            android:ellipsize="end"
            android:maxLines="1"

            android:text="@string/title_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/ExpenseCardView_Sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ExpenseCardView_Category"
            android:layout_marginEnd="8dp"

            android:text="@string/sum_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete_checkbox" />

        <ImageView
            android:id="@+id/delete_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_check_icon"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>