<?xml version="1.0" encoding="utf-8"?>

<!-- Data Binding layout -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="budgetMonthViewModel"
            type="no.hiof.trondkw.budgetapp.viewmodels.BudgetMonthViewModel" />
    </data>


        <!-- Main content layout -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".ui.AddEditExpenseFragment">


            <!-- Date -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_dropdown_icon"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Description -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/required"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_baseline_error_24"
                android:hint="@string/title"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="21"
                    android:inputType="text"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Category -->
            <!-- TODO: Set as dropdown menu not edit text -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:id="@+id/category_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_baseline_error_24"
                app:helperText="@string/required"
                android:hint="@string/category">

                <AutoCompleteTextView
                    android:id="@+id/category_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Expense sum -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/expense_sum_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_baseline_error_24"
                app:helperText="@string/required"
                android:hint="@string/sum"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/expense_sum_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Add expense button -->
            <!-- TODO: Remove and use AppBar icon to save -->
            <Button
                android:id="@+id/add_expense_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="end" />

        </androidx.appcompat.widget.LinearLayoutCompat>

</layout>